Fix jumpy action buttons in the editor panel

--- a/src/EditorPanel.scss
+++ b/src/EditorPanel.scss
@@ -1,9 +1,5 @@
 [data-panel='editor'] {
-  max-height: 100vh;
+  height: 100%;
   display: grid;
   grid-template-rows: 1fr 3rem;
-}
-
-.vscode-editor {
-  height: 75vh; // TODO: figure out how to do this in Chakra
 }
